--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "angular-jsoneditor": "^0.0.2",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.28",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
